--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^11.1.0",
     "framer-motion": "^4",
     "next": "11.0.1",
     "react": "17.0.2",
