--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^11.1.0",
     "framer-motion": "^4",
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
+    "next-mdx-remote": "^3.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
