fixes html tags styling for mdx files

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^11.1.0",
+    "@types/mdx-js__react": "^1.5.4",
     "framer-motion": "^4",
     "gray-matter": "^4.0.3",
     "next": "11.0.1",
